--- a/QuartzWebNancy/Views/QuartzManage/list.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/list.cshtml
@@ -1,6 +1,6 @@
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<dynamic>
 @{
-    Layout = null;
+    Layout = "/Shared/_LayoutEmpty.cshtml";
 }
 <form class="pure-form pure-form-stacked">
     <div class="pure-g">
