--- a/QuartzWebNancy/Views/QuartzManage/view.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/view.cshtml
@@ -1,55 +1,64 @@
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
 @{
-    Layout = null;
+    Layout = "/Shared/_LayoutEmpty.cshtml";
 }
-<div class="con-center">
-    <div class="pure-g">
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">编号: </label>
-            <label class="pure-u-1-1">{{item.id}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">计划名称: </label>
-            <label class="pure-u-1-1">{{item.sched_name}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">作业名称: </label>
-            <label class="pure-u-1-1">{{item.job_name}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">作业组: </label>
-            <label class="pure-u-1-1">{{item.job_group}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">外部程序集: </label>
-            <label class="pure-u-1-1">{{item.outAssembly}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">调用类: </label>
-            <label class="pure-u-1-1">{{item.job_class_name}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">是否可用: </label>
-            <label class="pure-u-1-1">{{item.is_durable | boolFilter}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">描述: </label>
-            <label class="pure-u-1-1">{{item.description}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">开始时间: </label>
-            <label class="pure-u-1-1">{{item.startTime}} </label>
-        </div>
-        <div class="pure-u-1-2">
-            <label class="pure-u-1-1">结束时间: </label>
-            <label class="pure-u-1-1">{{item.endTime}} </label>
-        </div>
-        <p>
-            <button class="pure-button pure-button-primary"
-                    ng-disabled="isVoted" ng-click="vote()">
-                {{voteBtnText}}
-            </button>
-            <a href="#!/list" class="pure-button">返回</a>
-        </p>
+<form class="pure-form pure-form-aligned">
+
+    <div class="pure-g">        
+        <div class="pure-u-1-5"><label>编号: </label></div>
+        <div class="pure-u-3-5"><input type="text" value="{{detail.id}}" /></div>
     </div>
-</div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">计划名称: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.sched_name}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">作业名称: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.job_name}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">作业组: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.job_group}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">外部程序集: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.outAssembly}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">调用类: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.job_class_name}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">是否可用: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.is_durable | boolFilter}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">描述: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.description}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">开始时间: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.startTime}}" />
+    </div>
+
+    <div class="pure-g pure-control-group">
+        <label class="pure-u-1-5">结束时间: </label>
+        <input class="pure-u-3-5" type="text" value="{{detail.endTime}}" />
+    </div>
+
+    <div class="pure-control-group">
+        <button class="pure-button pure-button-primary"
+                ng-disabled="isVoted" ng-click="vote()">
+            {{voteBtnText}}
+        </button>
+        <button href="#!/list" class="pure-button">返回</button>
+    </div>
+</form>
