--- a/QuartzWebNancy/Views/Shared/_Layout.cshtml
+++ b/QuartzWebNancy/Views/Shared/_Layout.cshtml
@@ -9,8 +9,12 @@
     <link rel="stylesheet" type="text/css" href="~/Content/QuartzManage/static/css/app.css" />
 
     <script src="~/Content/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.staticfile.org/angular.js/1.7.0/angular.min.js"></script>
-    <script src="https://cdn.bootcss.com/angular.js/1.7.0/angular-route.min.js"></script>
+    <script src="~/Content/Scripts/angular-1.7.0.min.js"></script>
+    <script src="~/Content/Scripts/angular-route-1.7.0.min.js"></script>
+    <script src="~/Content/Scripts/angular-animate-1.7.0.min.js"></script>
+
+    @*<script src="https://cdn.staticfile.org/angular.js/1.7.0/angular.min.js"></script>
+        <script src="https://cdn.bootcss.com/angular.js/1.7.0/angular-route.min.js"></script>*@
     <script type="text/javascript" src="~/Content/QuartzManage/app/app.js"></script>
     <script type="text/javascript" src="~/Content/QuartzManage/app/service/voteServices.js"></script>
     <script type="text/javascript" src="~/Content/QuartzManage/app/filter/voteFilters.js"></script>
