--- a/QuartzWebNancy/Content/QuartzManage/static/css/app.css
+++ b/QuartzWebNancy/Content/QuartzManage/static/css/app.css
@@ -4,20 +4,26 @@ a {color:#0000ff;}
 .header {position:fixed;top:0;left:0;width:100%;height:40px;background-color:#666;}
 .header-title {margin-left:15px;line-height:40px;font-size:18px;color:#fcfcfc;}
 
-.container {position:absolute;top:55px;bottom:15px;left:10%;width:80%;background-color:#fff;}
+.container {position:absolute;top:55px;bottom:15px;left:10%;width:80%;background-color:#fff;border-radius: 5px;}
 .content {height:100%;overflow:auto;}
 
 .pure-g>div {padding:15px;box-sizing:border-box;}
 .pure-g .pure-table {width:100%;}
+.pure-g .pure-table tbody tr:hover{ background-color:#DFDFDF;}
 .pure-g .pure-table .pure-img {max-width:48px;max-height:48px;}
 
 .con-center h3,
 .con-center p {margin:10px;text-align:center;}
 
-.pure-form fieldset {margin:15px 200px;}
+.pure-form fieldset {margin:2em}
 .pure-form fieldset legend {margin:15px 0;font-weight:bold;}
 .pure-form fieldset .pure-control-group {margin:15px 0;}
 .pure-form fieldset input[type="text"],
-.pure-form fieldset select {width:200px;}
+.pure-form fieldset select {width:250px;}
+.pure-form select{height: 2.50em;}
 input.ng-invalid {color:#b94a48;border-color:#e9322d;}
 .val-error {font-size:12px;color:#ec0000;}
+
+.nghide {transition: all linear 0.5s;height:200px;}
+.ng-hide {height: 0;}
+.triggerWin>td{padding: 0 1em;border: 0;}
