--- a/QuartzWebNancy/Views/QuartzManage/TriggerList.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/TriggerList.cshtml
@@ -2,27 +2,11 @@
 @{
     Layout = "/Shared/_LayoutEmpty.cshtml";
 }
-<form class="pure-form pure-form-stacked">
-    <div class="pure-g">
-        <div class="pure-u-1-2">
-            <label>Search: </label>
-            <input type="text" class="pure-u-1-1" ng-model="queryVal" />
-        </div>
-        <div class="pure-u-1-2">
-            <label>Order by: </label>
-            <select class="pure-u-1-1 orderProp" ng-model="orderProp">
-                <option value="-id">编号</option>
-                <option value="sched_name">计划名称</option>
-            </select>
-        </div>
-    </div>
-</form>
-<div class="pure-g" style="margin-top:-25px;">
+<div class="pure-g">
     <div class="pure-u-1-1">
         <p>
             <a href="#!/add" class="pure-button pure-button-primary">新增</a>
         </p>
-
         <table class="pure-table pure-table-horizontal">
             <thead>
                 <tr>
@@ -30,29 +14,33 @@
                     <th>计划名称</th>
                     <th>作业名称</th>
                     <th>作业组</th>
-                    <th>外部程序集</th>
-                    <th>调用类</th>
-                    <th>是否可用</th>
-                    <th>描述</th>
+                    <th>触发器</th>
+                    <th>触发器组</th>
+                    <th>触发规则</th>
+                    <th>触发类型</th>
+                    <th>触发次数</th>
+                    <th>触发间隔</th>
                     <th>开始时间</th>
                     <th>结束时间</th>
-                    <th>触发器</th>
+                    <th>描述</th>
                     <th>操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in scheduleDetails | filter:queryVal | orderBy:orderProp" ng-dblclick="viewSchedule($event, item.id)">
+                <tr ng-repeat="item in triggers | filter:queryVal | orderBy:orderProp" ng-dblclick="viewSchedule($event, item.id)">
                     <td><a href="#!/view/{{item.id}}">{{item.id}}</a></td>
                     <td>{{item.sched_name}}</td>
                     <td>{{item.job_name}}</td>
                     <td>{{item.job_group}}</td>
-                    <td>{{item.outAssembly}}</td>
-                    <td>{{item.job_class_name}}</td>
-                    <td>{{item.is_durable | boolFilter}}</td>
-                    <td>{{item.description}}</td>
+                    <td>{{item.trigger_name}}</td>
+                    <td>{{item.trigger_group}}</td>
+                    <td>{{item.cronexpression}}</td>
+                    <td>{{item.trigger_type}}</td>
+                    <td>{{item.repeat_count}}</td>
+                    <td>{{item.repeat_interval}}</td>
                     <td>{{item.startTime}}</td>
                     <td>{{item.endTime}}</td>
-                    <td><a href="#" ng-click="openTrigger($event, item.id)">触发器</a></td>
+                    <td>{{item.description}}</td>
                     <td>
                         <a href="#!/add/{{item.id}}">复制</a>
                         <a href="#!/edit/{{item.id}}">编辑</a>
@@ -61,5 +49,8 @@
                 </tr>
             </tbody>
         </table>
+        <p>
+            <a href="#!/list" class="pure-button">返回</a>
+        </p>
     </div>
 </div>
