--- a/QuartzWebNancy/Views/QuartzManage/Index.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/Index.cshtml
@@ -1,10 +1,25 @@
 ﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
 <body>
-    <header class="header">
-        <span class="header-title">schedule manage</span>
-    </header>
-
-    <div class="container">
-        <div class="content" ng-view></div>
+    <div>
+        <section class="mainAside">
+            <aside class="main-aside">
+                <ul>
+                    <li>
+                        <a href="/Quartz/view">操作</a>
+                    </li>
+                </ul>
+            </aside>
+        </section>
+        <section class="main-container">
+            <section class="main-container-content">
+                <header class="header">
+                    <span class="header-title">QuartzScheduler</span>
+                    <span class="header-run">作业正在执行...</span>
+                </header>
+                <div class="container">
+                    <div class="content" ng-view></div>
+                </div>
+            </section>
+        </section>
     </div>
 </body>
