--- a/QuartzWebNancy/Content/QuartzManage/static/css/app.css
+++ b/QuartzWebNancy/Content/QuartzManage/static/css/app.css
@@ -3,7 +3,7 @@ a {color:#0000ff;}
 
 .header {width:100%;height:30px;background-color:#666;}
 .header-title {margin-left:15px;line-height:30px;font-size:18px;color:#fcfcfc;}
-.header-run {margin-left:30px;line-height:30px;font-size:12px;color:#5cb85c;}
+.header-run {float:right;margin-right:20px;line-height:30px;font-size:12px;color:#5cb85c;}
 
 .mainAside{position:absolute;width:70px;height:100%;left:0;top:0;color:#ffffff;background-color:#333;}
 .main-aside ul, .main-aside ul li {margin: 0;padding: 0;list-style-type: none;list-style-image: none;}
