--- a/QuartzWebNancy/Views/QuartzManage/Index.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/Index.cshtml
@@ -14,7 +14,7 @@
             <section class="main-container-content">
                 <header class="header">
                     <span class="header-title">QuartzScheduler</span>
-                    <span class="header-run">作业正在执行...</span>
+                    <span class="header-run">@Model.StatusName </ span >
                 </header>
                 <div class="container">
                     <div class="content" ng-view></div>
