--- a/QuartzWebNancy/Views/QuartzManage/TriggerList.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/TriggerList.cshtml
@@ -50,7 +50,7 @@
             </tbody>
         </table>
         <p>
-            <a href="#!/list" class="pure-button">返回</a>
+            <a href="#!/home" class="pure-button">返回</a>
         </p>
     </div>
 </div>
