--- a/QuartzWebNancy/Views/QuartzManage/view.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/view.cshtml
@@ -52,7 +52,7 @@
         </div>
 
         <div class="pure-control-group">
-            <a href="#!/list" class="pure-button">返回</a>
+            <a href="#!/home" class="pure-button">返回</a>
         </div>
     </fieldset>
 
