--- a/QuartzWebNancy/Views/QuartzManage/triggerEdit.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/triggerEdit.cshtml
@@ -91,7 +91,7 @@
             <input type="submit" value="保存" class="pure-button pure-button-primary"
                    ng-click="submitForm()"
                    ng-disabled="playerForm.$invalid" />
-            <a href="#!/list" class="pure-button">取消</a>
+            <a href="#!/home" class="pure-button">取消</a>
         </div>
     </fieldset>
 </form>
