--- a/QuartzWebNancy/Views/Shared/_Layout.cshtml
+++ b/QuartzWebNancy/Views/Shared/_Layout.cshtml
@@ -5,13 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>@ViewBag.Title</title>
+
     <link rel="stylesheet" type="text/css" href="~/Content/QuartzManage/static/css/pure-0.6.min.css" />
     <link rel="stylesheet" type="text/css" href="~/Content/QuartzManage/static/css/app.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/css/wui.min.css" />
 
     <script src="~/Content/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Content/Scripts/angular-1.7.0.min.js"></script>
     <script src="~/Content/Scripts/angular-route-1.7.0.min.js"></script>
     <script src="~/Content/Scripts/angular-animate-1.7.0.min.js"></script>
+    <script src="~/Content/Scripts/wui-date.js" charset="utf-8"></script>
 
     @*<script src="https://cdn.staticfile.org/angular.js/1.7.0/angular.min.js"></script>
         <script src="https://cdn.bootcss.com/angular.js/1.7.0/angular-route.min.js"></script>*@
