--- a/QuartzWebNancy/Views/QuartzManage/Index.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/Index.cshtml
@@ -5,7 +5,13 @@
             <aside class="main-aside">
                 <ul>
                     <li>
-                        <a href="/Quartz/view">操作</a>
+                        <a href="#!/home">主页</a>
+                    </li>
+                    <li>
+                        <a href="#!/ScheduleLog">执行日志</a>
+                    </li>
+                    <li>
+                        <a href="/Quartz/view">作业操作</a>
                     </li>
                 </ul>
             </aside>
