--- a/QuartzWebNancy/Views/QuartzManage/home.cshtml
+++ b/QuartzWebNancy/Views/QuartzManage/home.cshtml
@@ -2,31 +2,28 @@
 @{
     Layout = "/Shared/_LayoutEmpty.cshtml";
 }
-<form class="pure-form pure-form-stacked">
+<form class="pure-form">
     <div class="pure-g">
-        <div class="pure-u-1-3">
+        <div class="pure-u-1-1">
             <label>Search: </label>
-            <input type="text" class="pure-u-1-1" ng-model="queryVal" />
-        </div>
-        <div class="pure-u-1-3">
+            <input type="text" ng-model="queryVal" />
             <label>Order by: </label>
-            <select class="pure-u-1-1 orderProp" ng-model="orderProp">
+            <select class="orderProp" ng-model="orderProp">
                 <option value="-id">编号</option>
                 <option value="sched_name">计划名称</option>
             </select>
+
+            <a href="#!/add" class="pure-button pure-button-primary">新增</a>
         </div>
     </div>
 </form>
-<div class="pure-g" style="margin-top:-25px;">
+<div class="pure-g" style="margin-top:-20px;">
     <div class="pure-u-1-1">
-        <p>
-            <a href="#!/add" class="pure-button pure-button-primary">新增</a>
-        </p>
-
         <table class="pure-table pure-table-horizontal">
             <thead>
                 <tr>
                     <th>编号</th>
+                    <th>复制作业</th>
                     <th>计划名称</th>
                     <th>作业名称</th>
                     <th>作业组</th>
@@ -36,15 +33,16 @@
                     <th>描述</th>
                     <th>开始时间</th>
                     <th>结束时间</th>
-                    <th>是否在作业队列</th>
+                    <th>作业队列</th>
                     <th>操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in scheduleDetails | filter:queryVal | orderBy:orderProp" ng-dblclick="viewSchedule($event, item.id)">
+                <tr ng-repeat="item in scheduleDetails | filter:queryVal | orderBy:orderProp" ng-dblclick="viewSchedule($event, item.id)" class='{{ !item.isRunning?"white":""}}'>
                     <td>
                         <a href="#!/view/{{item.id}}">{{item.id}}</a>
                     </td>
+                    <td><a href="#!/add/{{item.id}}" class="pure-button">复制</a></td>
                     <td>{{item.sched_name}}</td>
                     <td>{{item.job_name}}</td>
                     <td>{{item.job_group}}</td>
@@ -55,14 +53,14 @@
                     <td>{{item.startTime}}</td>
                     <td>{{item.endTime}}</td>
                     <td>
-                        <a href="#" ng-click="openTrigger($event, item.id)" ng-hide="item.isRunning">否</a>
-                        <label ng-hide="!item.isRunning">是</label>
+                        <a href="#" class="pure-button" ng-click="JobToSchedulePlan($event, item.id,1)" ng-hide="item.isRunning">加载</a>
+                        <a href="#" class="pure-button" ng-click="JobToSchedulePlan($event, item.id,2)" ng-hide="!item.isRunning">移除</a>
                     </td>
                     <td>
-                        <a href="#" ng-click="openTrigger($event, item.id)">触发器</a>
-                        <a href="#!/add/{{item.id}}">复制</a>
-                        <a href="#!/edit/{{item.id}}">编辑</a>
-                        <a href="#" ng-click="removeSchedule($event, item.id)">删除</a>
+                        <a href="#" class="pure-button" ng-click="openTrigger($event, item.id)">查看触发器</a>
+                        <a href="#" class="pure-button" ng-click="ExecuteNow($event, item.id)">立即执行</a>
+                        <a href="#!/edit/{{item.id}}" class="pure-button">编辑</a>
+                        <a href="#" class="pure-button" ng-click="removeSchedule($event, item.id)">删除</a>
                     </td>
                 </tr>
             </tbody>
